--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>	
-<aside>
+
+
+<header>
+<div class="menu-btn">
+<div></div>
+<span></span>
+<span></span>
+<span></span>
+</div>
+</header>
+
+<aside class="menu">
+	<input>
+	<ul data-bind='foreach: clubList()'>
+	<li data-bind='text: name'></li>
+	</ul>
+</aside>
+
 <div id="map"></div> 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUDcwuQZ9SQCW_Df9oL4c17lymsxR6Aeo&callback=initMap" async defer></script>
 <script src="js/lib/knockout-3.2.0.js"></script>
-<script src="./js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
