--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 <link rel='stylesheet' type='text/css' href='css/style.css'>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>	
 
 
 <header>
-<div class="menu-btn">
+<div class="menu-btn" data-bind="click: toggle">
 <div></div>
 <span></span>
 <span></span>
@@ -15,8 +16,8 @@
 </div>
 </header>
 
-<aside class="menu">
-	<input>
+<aside class="menu" id="menu">
+	<input class='search-box' placeholder="search..." type="search" data-bind="value:query, valueUpdate: 'keyup'"  autocomplete='off'>
 	<ul data-bind='foreach: clubList()'>
 	<li data-bind='text: name'></li>
 	</ul>
