holy shit its working

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <span></span>
 </div>
 </header>
+<div id='hidden-info'><h1>Yo</h1></div>
+<div id='hidden-photo'><h1>pictures</h1></div>
 
 <aside class="menu" id="menu">
 	<input class='search-box' placeholder="search..." type="search" data-bind="value:query, valueUpdate: 'keyup'"  autocomplete='off'>
