--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div id='hidden-info'><h1>Yo</h1></div>
 <div id='hidden-photo'><h1>pictures</h1></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUDcwuQZ9SQCW_Df9oL4c17lymsxR6Aeo&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUDcwuQZ9SQCW_Df9oL4c17lymsxR6Aeo&callback=initMap" onerror="googleError()" async defer></script>
 <script src="js/lib/knockout-3.2.0.js"></script>
 <script src="js/app.js"></script>
 </body>
